--- a/RoseNeRF/index.html
+++ b/RoseNeRF/index.html
@@ -33,7 +33,7 @@
     <div class="container">
         <div class="row">
             <h1 class="col-md-12 text-center">
-              Refracting Once is Enough:
+              Sampling Neural Radiance Fields
               <br> for Refractive Objects
               <br><small>SIGGRAPH Asia 2022 Technical Communications</small>
             </h1>
