--- a/RoseNeRF/index.html
+++ b/RoseNeRF/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>SampleNeRFRO</title>
+    <title>RoseNeRF</title>
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
