--- a/RoseNeRF/index.html
+++ b/RoseNeRF/index.html
@@ -115,13 +115,6 @@
                 </ul>
             </div>
         </div>
-        <!-- <div class="row">
-            <figure class="col-md-8 col-md-offset-2">
-            <img src="assets/teaser.png" class="img-responsive" alt="overview">
-                <figcaption>
-                </figcaption>
-            </figure>
-        </div> -->
         <!-- <div class="row"> -->
         <!--     <div class="col&#45;md&#45;8 col&#45;md&#45;offset&#45;2 text&#45;center last"> -->
         <!--         <iframe align="center" width="560" height="315" src="https://www.youtube.com/embed/GAe0qKKQY_I" frameborder="0" allowfullscreen></iframe> -->
@@ -132,6 +125,19 @@
                 <h3>
                     Abstract
                 </h3>
+            </div>
+        </div>
+        <div class="row">
+            <figure class="col-md-8 col-md-offset-2">
+            <img src="assets/teaser.png" class="img-responsive" alt="overview">
+                <figcaption>
+                     <br>
+                </figcaption>
+            </figure>
+        </div>
+
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
                 <p class="text-justify">
                     Neural Radiance Fields (NeRF) have shown promise in novel view synthesis, but it still face challenges when applied to refractive objects.
                     The presence of refraction disrupts multiview consistency, often resulting in renderings that are either blurred or distorted.   
@@ -163,6 +169,12 @@
                         Data provided by <a href="https://nex-mpi.github.io/" target="_blank"><i>NeX: Real-time View Synthesis with Neural Basis Expansion, CVPR 2021</i></a>
                     </figcaption>
                 </figure>
+                <figure>
+                    <img src="assets/res_shiny_tab.jpg" class="img-responsive" alt="overview" style="margin-bottom: 0.25em;">
+                    <figcaption>
+                    </figcaption>
+                </figure>
+
                 <h4>
                     Eikonal Field Dataset
                 </h4>
@@ -174,6 +186,12 @@
                         Data provided by <a href="https://eikonalfield.mpi-inf.mpg.de/" target="_blank"><i>Eikonal Fields for Refractive Novel-View Synthesis, SIGGRAPH 2022 (Conference Proceedings)</i></a>
                     </figcaption>
                 </figure>
+                <figure>
+                    <img src="assets/res_eik_tab.jpg" class="img-responsive" alt="overview" style="margin-bottom: 0.25em;">
+                    <figcaption>
+                    </figcaption>
+                </figure>
+
                 <h4>
                     Ablation
                 </h4>
