--- a/RoseNeRF/index.html
+++ b/RoseNeRF/index.html
@@ -99,9 +99,9 @@
             <div class="col-md-6 col-md-offset-3 text-center">
                 <ul class="nav nav-pills nav-justified">
                     <li>
-                        <a href="" target="_blank">
+                        <a href="https://dl.acm.org/doi/10.1145/3652583.3658000" target="_blank">
                         <img src="assets/pdf.png" height="50px">
-                            <h5><b>Paper(Coming soon)</b></h5>
+                            <h5><b>Paper</b></h5>
                         </a>
                     </li>
                     <li>
